# cline-ui

./: .gitignore  README.md  cline-ui.py  pyproject.toml
src/cline_ui/: app.py  cli.py  cline_client.py
src/cline_ui/templates/: base.html  index.html  settings.html
